Bug 1117763 - Remove range request headers on cache entry open failure. r=michal